# pretix-ogone

./: .update-locales.sh  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_ogone/: apps.py  constants.py  payment.py  signals.py  urls.py  views.py
pretix_ogone/templates/pretix_ogone/: control.html  pending.html  redirecting.html
