[project]
name = "pretix-ogone"
dynamic = ["version"]
description = "Accept payments through the Ogone interface (legacy interface of Nexi Payengine / Wordline)"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_ogone = "pretix_ogone:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix/pretix-ogone"
repository = "https://github.com/pretix/pretix-ogone"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_ogone.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
